--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -8,6 +8,8 @@
 @import 'stats';
 @import 'articles-sec';
 @import 'footer';
+@import 'jobs-page';
+
 @import url(../assets/fonts/fontiran.css);
 
 @font-face {
