--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -3,6 +3,7 @@ $main-color:#1967D2;
 $main-color-01:#1966d2c7;
 $main-color-02:#1966d291;
 $main-color-03:#1966d257;
+$main-color-04:rgba(25, 103, 210, 0.07);
 $second-color:#1451a4;
 $header-background:#10195D;
 $orange-color:#F9AB00;
