--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -9,6 +9,7 @@
 @import 'articles-sec';
 @import 'footer';
 @import 'jobs-page';
+@import 'job-item';
 
 @import url(../assets/fonts/fontiran.css);
 
