--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1988,6 +1988,128 @@ footer .footer-sec-2 .social-links .social-link a {
   }
 }
 
+.contact-container {
+  text-align: center;
+  padding-top: 20px;
+}
+
+.contact-container h5 {
+  text-align: center;
+  font-weight: 700;
+}
+
+.contact-info {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 30px;
+  margin-top: -40px;
+  -webkit-box-shadow: 0px 11px 16px 0px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 11px 16px 0px rgba(0, 0, 0, 0.04);
+}
+
+.contact-info .contact-info-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-info .contact-info-item img {
+  margin-bottom: 10px;
+}
+
+.contact-info .contact-info-item span {
+  margin-top: 15px;
+  color: #696969;
+}
+
+.contact-info .contact-info-item .phone-num {
+  color: #1967D2;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 3px;
+}
+
+#contact-sec {
+  padding: 30px;
+  border: 1px solid #e4e4e4;
+  border-radius: 8px;
+  margin: 50px auto;
+}
+
+#contact-sec .contact-form {
+  margin-top: 30px;
+  padding: 20px;
+}
+
+#contact-sec .contact-form input, #contact-sec .contact-form textarea {
+  padding: 31px 15px;
+  border-radius: 8px;
+  border-color: transparent;
+  color: #696969;
+  background-color: #F0F5F7;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin-bottom: 20px;
+  -webkit-transition: all .3s linear;
+  transition: all .3s linear;
+}
+
+#contact-sec .contact-form input::-webkit-input-placeholder, #contact-sec .contact-form textarea::-webkit-input-placeholder {
+  text-align: right;
+}
+
+#contact-sec .contact-form input:-ms-input-placeholder, #contact-sec .contact-form textarea:-ms-input-placeholder {
+  text-align: right;
+}
+
+#contact-sec .contact-form input::-ms-input-placeholder, #contact-sec .contact-form textarea::-ms-input-placeholder {
+  text-align: right;
+}
+
+#contact-sec .contact-form input::placeholder, #contact-sec .contact-form textarea::placeholder {
+  text-align: right;
+}
+
+#contact-sec .contact-form input:focus, #contact-sec .contact-form textarea:focus {
+  border-color: #1967D2;
+  color: #1967D2;
+  background-color: #fff;
+}
+
+#contact-sec .contact-form .form-textarea {
+  padding-top: 20px;
+}
+
+#contact-sec .contact-form .contact-btn {
+  background-color: #1967D2;
+  color: #fff;
+  padding: 13px 90px;
+  display: block;
+  margin-right: auto;
+  border-radius: 8px;
+}
+
+#contact-sec .contact-form .contact-btn:hover {
+  background-color: #2d2dda;
+}
+
+@media screen and (max-width: 585px) {
+  .contact-info-item {
+    margin-bottom: 20px;
+  }
+}
+
 @font-face {
   font-family: IRANSans;
   font-style: normal;
